boot version 3.0.2 -> 2.7.7 , java version 17 -> 11